nvml-wrapper-sys/nvml.h

    /**
 * Enum to represent type of bridge chip
 */
    typedef enum nvmlBridgeChipType_enum
    {
        NVML_BRIDGE_CHIP_PLX = 0,
        NVML_BRIDGE_CHIP_BRO4 = 1
    } nvmlBridgeChipType_t;
    /**
 * Enum to represent the NvLink utilization counter packet units
 */
    typedef enum nvmlNvLinkUtilizationCountUnits_enum
    {
        NVML_NVLINK_COUNTER_UNIT_CYCLES = 0,   // count by cycles
        NVML_NVLINK_COUNTER_UNIT_PACKETS = 1,  // count by packets
        NVML_NVLINK_COUNTER_UNIT_BYTES = 2,    // count by bytes
        NVML_NVLINK_COUNTER_UNIT_RESERVED = 3, // count reserved for internal use
        // this must be last
        NVML_NVLINK_COUNTER_UNIT_COUNT
    } nvmlNvLinkUtilizationCountUnits_t;
    /**
 * Enum to represent the NvLink utilization counter packet types to count
 *  ** this is ONLY applicable with the units as packets or bytes
 *  ** as specified in \a nvmlNvLinkUtilizationCountUnits_t
 *  ** all packet filter descriptions are target GPU centric
 *  ** these can be "OR'd" together 
 */
    typedef enum nvmlNvLinkUtilizationCountPktTypes_enum
    {
        NVML_NVLINK_COUNTER_PKTFILTER_NOP = 0x1,         // no operation packets
        NVML_NVLINK_COUNTER_PKTFILTER_READ = 0x2,        // read packets
        NVML_NVLINK_COUNTER_PKTFILTER_WRITE = 0x4,       // write packets
        NVML_NVLINK_COUNTER_PKTFILTER_RATOM = 0x8,       // reduction atomic requests
        NVML_NVLINK_COUNTER_PKTFILTER_NRATOM = 0x10,     // non-reduction atomic requests
        NVML_NVLINK_COUNTER_PKTFILTER_FLUSH = 0x20,      // flush requests
        NVML_NVLINK_COUNTER_PKTFILTER_RESPDATA = 0x40,   // responses with data
        NVML_NVLINK_COUNTER_PKTFILTER_RESPNODATA = 0x80, // responses without data
        NVML_NVLINK_COUNTER_PKTFILTER_ALL = 0xFF         // all packets
    } nvmlNvLinkUtilizationCountPktTypes_t;
    /** 
 * Struct to define the NVLINK counter controls
 */
    typedef struct nvmlNvLinkUtilizationControl_st
    {
        nvmlNvLinkUtilizationCountUnits_t units;
        nvmlNvLinkUtilizationCountPktTypes_t pktfilter;
    } nvmlNvLinkUtilizationControl_t;
    /**
 * Enum to represent NvLink queryable capabilities
 */
    typedef enum nvmlNvLinkCapability_enum
    {
        NVML_NVLINK_CAP_P2P_SUPPORTED = 0,  // P2P over NVLink is supported
        NVML_NVLINK_CAP_SYSMEM_ACCESS = 1,  // Access to system memory is supported
        NVML_NVLINK_CAP_P2P_ATOMICS = 2,    // P2P atomics are supported
        NVML_NVLINK_CAP_SYSMEM_ATOMICS = 3, // System memory atomics are supported
        NVML_NVLINK_CAP_SLI_BRIDGE = 4,     // SLI is supported over this link
        NVML_NVLINK_CAP_VALID = 5,          // Link is supported on this device
        // should be last
        NVML_NVLINK_CAP_COUNT
    } nvmlNvLinkCapability_t;
    /**
 * Enum to represent NvLink queryable error counters
 */
    typedef enum nvmlNvLinkErrorCounter_enum
    {
        NVML_NVLINK_ERROR_DL_REPLAY = 0,   // Data link transmit replay error counter
        NVML_NVLINK_ERROR_DL_RECOVERY = 1, // Data link transmit recovery error counter
        NVML_NVLINK_ERROR_DL_CRC_FLIT = 2, // Data link receive flow control digit CRC error counter
        NVML_NVLINK_ERROR_DL_CRC_DATA = 3, // Data link receive data CRC error counter

        // this must be last
        NVML_NVLINK_ERROR_COUNT
    } nvmlNvLinkErrorCounter_t;
    /**
 * Represents level relationships within a system between two GPUs
 * The enums are spaced to allow for future relationships
 */
    typedef enum nvmlGpuLevel_enum
    {
        NVML_TOPOLOGY_INTERNAL = 0,    // e.g. Tesla K80
        NVML_TOPOLOGY_SINGLE = 10,     // all devices that only need traverse a single PCIe switch
        NVML_TOPOLOGY_MULTIPLE = 20,   // all devices that need not traverse a host bridge
        NVML_TOPOLOGY_HOSTBRIDGE = 30, // all devices that are connected to the same host bridge
        NVML_TOPOLOGY_NODE = 40,       // all devices that are connected to the same NUMA node but possibly multiple host bridges
        NVML_TOPOLOGY_SYSTEM = 50,     // all devices in the system

        // there is purposefully no COUNT here because of the need for spacing above
    } nvmlGpuTopologyLevel_t;
    /* P2P Capability Index Status*/
    typedef enum nvmlGpuP2PStatus_enum
    {
        NVML_P2P_STATUS_OK = 0,
        NVML_P2P_STATUS_CHIPSET_NOT_SUPPORED,
        NVML_P2P_STATUS_GPU_NOT_SUPPORTED,
        NVML_P2P_STATUS_IOH_TOPOLOGY_NOT_SUPPORTED,
        NVML_P2P_STATUS_DISABLED_BY_REGKEY,
        NVML_P2P_STATUS_NOT_SUPPORTED,
        NVML_P2P_STATUS_UNKNOWN

    } nvmlGpuP2PStatus_t;
    /* P2P Capability Index*/
    typedef enum nvmlGpuP2PCapsIndex_enum
    {
        NVML_P2P_CAPS_INDEX_READ = 0,
        NVML_P2P_CAPS_INDEX_WRITE,
        NVML_P2P_CAPS_INDEX_NVLINK,
        NVML_P2P_CAPS_INDEX_ATOMICS,
        NVML_P2P_CAPS_INDEX_PROP,
        NVML_P2P_CAPS_INDEX_UNKNOWN
    } nvmlGpuP2PCapsIndex_t;
    /**
 * Information about the Bridge Chip Firmware
 */
    typedef struct nvmlBridgeChipInfo_st
    {
        nvmlBridgeChipType_t type; //!< Type of Bridge Chip
        unsigned int fwVersion;    //!< Firmware Version. 0=Version is unavailable
    } nvmlBridgeChipInfo_t;
    /**
 * This structure stores the complete Hierarchy of the Bridge Chip within the board. The immediate 
 * bridge is stored at index 0 of bridgeInfoList, parent to immediate bridge is at index 1 and so forth.
 */
    typedef struct nvmlBridgeChipHierarchy_st
    {
        unsigned char bridgeCount;                                     //!< Number of Bridge Chips on the Board
        nvmlBridgeChipInfo_t bridgeChipInfo[NVML_MAX_PHYSICAL_BRIDGE]; //!< Hierarchy of Bridge Chips on the board
    } nvmlBridgeChipHierarchy_t;
    /**
 *  Represents Type of Sampling Event
 */
    typedef enum nvmlSamplingType_enum
    {
        NVML_TOTAL_POWER_SAMPLES = 0,        //!< To represent total power drawn by GPU
        NVML_GPU_UTILIZATION_SAMPLES = 1,    //!< To represent percent of time during which one or more kernels was executing on the GPU
        NVML_MEMORY_UTILIZATION_SAMPLES = 2, //!< To represent percent of time during which global (device) memory was being read or written
        NVML_ENC_UTILIZATION_SAMPLES = 3,    //!< To represent percent of time during which NVENC remains busy
        NVML_DEC_UTILIZATION_SAMPLES = 4,    //!< To represent percent of time during which NVDEC remains busy
        NVML_PROCESSOR_CLK_SAMPLES = 5,      //!< To represent processor clock samples
        NVML_MEMORY_CLK_SAMPLES = 6,         //!< To represent memory clock samples

        // Keep this last
        NVML_SAMPLINGTYPE_COUNT
    } nvmlSamplingType_t;
    /**
 * Represents the queryable PCIe utilization counters
 */
    typedef enum nvmlPcieUtilCounter_enum
    {
        NVML_PCIE_UTIL_TX_BYTES = 0, // 1KB granularity
        NVML_PCIE_UTIL_RX_BYTES = 1, // 1KB granularity

        // Keep this last
        NVML_PCIE_UTIL_COUNT
    } nvmlPcieUtilCounter_t;
    /**
 * Represents the type for sample value returned
 */
    typedef enum nvmlValueType_enum
    {
        NVML_VALUE_TYPE_DOUBLE = 0,
        NVML_VALUE_TYPE_UNSIGNED_INT = 1,
        NVML_VALUE_TYPE_UNSIGNED_LONG = 2,
        NVML_VALUE_TYPE_UNSIGNED_LONG_LONG = 3,
        NVML_VALUE_TYPE_SIGNED_LONG_LONG = 4,

        // Keep this last
        NVML_VALUE_TYPE_COUNT
    } nvmlValueType_t;
    /**
 * Union to represent different types of Value
 */
    typedef union nvmlValue_st
    {
        double dVal;               //!< If the value is double
        unsigned int uiVal;        //!< If the value is unsigned int
        unsigned long ulVal;       //!< If the value is unsigned long
        unsigned long long ullVal; //!< If the value is unsigned long long
        signed long long sllVal;   //!< If the value is signed long long
    } nvmlValue_t;
    /**
 * Information for Sample
 */
    typedef struct nvmlSample_st
    {
        unsigned long long timeStamp; //!< CPU Timestamp in microseconds
        nvmlValue_t sampleValue;      //!< Sample Value
    } nvmlSample_t;