nvml-wrapper-sys/src/bindings.rs

pub type nvmlNvLinkUtilizationControl_t = nvmlNvLinkUtilizationControl_st;
pub const nvmlNvLinkCapability_enum_NVML_NVLINK_CAP_P2P_SUPPORTED:
          nvmlNvLinkCapability_enum =
    0;
pub const nvmlNvLinkCapability_enum_NVML_NVLINK_CAP_SYSMEM_ACCESS:
          nvmlNvLinkCapability_enum =
    1;
pub const nvmlNvLinkCapability_enum_NVML_NVLINK_CAP_P2P_ATOMICS:
          nvmlNvLinkCapability_enum =
    2;
pub const nvmlNvLinkCapability_enum_NVML_NVLINK_CAP_SYSMEM_ATOMICS:
          nvmlNvLinkCapability_enum =
    3;
pub const nvmlNvLinkCapability_enum_NVML_NVLINK_CAP_SLI_BRIDGE:
          nvmlNvLinkCapability_enum =
    4;
pub const nvmlNvLinkCapability_enum_NVML_NVLINK_CAP_VALID:
          nvmlNvLinkCapability_enum =
    5;
pub const nvmlNvLinkCapability_enum_NVML_NVLINK_CAP_COUNT:
          nvmlNvLinkCapability_enum =
    6;
pub type nvmlNvLinkCapability_enum = raw::c_uint;
pub use self::nvmlNvLinkCapability_enum as nvmlNvLinkCapability_t;
pub const nvmlNvLinkErrorCounter_enum_NVML_NVLINK_ERROR_DL_REPLAY:
          nvmlNvLinkErrorCounter_enum =
    0;
pub const nvmlNvLinkErrorCounter_enum_NVML_NVLINK_ERROR_DL_RECOVERY:
          nvmlNvLinkErrorCounter_enum =
    1;
pub const nvmlNvLinkErrorCounter_enum_NVML_NVLINK_ERROR_DL_CRC_FLIT:
          nvmlNvLinkErrorCounter_enum =
    2;
pub const nvmlNvLinkErrorCounter_enum_NVML_NVLINK_ERROR_DL_CRC_DATA:
          nvmlNvLinkErrorCounter_enum =
    3;
pub const nvmlNvLinkErrorCounter_enum_NVML_NVLINK_ERROR_COUNT:
          nvmlNvLinkErrorCounter_enum =
    4;
pub type nvmlNvLinkErrorCounter_enum = raw::c_uint;
pub use self::nvmlNvLinkErrorCounter_enum as nvmlNvLinkErrorCounter_t;
pub const nvmlGpuLevel_enum_NVML_TOPOLOGY_INTERNAL: nvmlGpuLevel_enum = 0;
pub const nvmlGpuLevel_enum_NVML_TOPOLOGY_SINGLE: nvmlGpuLevel_enum = 10;
pub const nvmlGpuLevel_enum_NVML_TOPOLOGY_MULTIPLE: nvmlGpuLevel_enum = 20;
pub const nvmlGpuLevel_enum_NVML_TOPOLOGY_HOSTBRIDGE: nvmlGpuLevel_enum = 30;
pub const nvmlGpuLevel_enum_NVML_TOPOLOGY_CPU: nvmlGpuLevel_enum = 40;
pub const nvmlGpuLevel_enum_NVML_TOPOLOGY_SYSTEM: nvmlGpuLevel_enum = 50;
pub type nvmlGpuLevel_enum = raw::c_uint;
pub use self::nvmlGpuLevel_enum as nvmlGpuTopologyLevel_t;
pub const nvmlGpuP2PStatus_enum_NVML_P2P_STATUS_OK: nvmlGpuP2PStatus_enum = 0;
pub const nvmlGpuP2PStatus_enum_NVML_P2P_STATUS_CHIPSET_NOT_SUPPORED:
          nvmlGpuP2PStatus_enum =
    1;
pub const nvmlGpuP2PStatus_enum_NVML_P2P_STATUS_GPU_NOT_SUPPORTED:
          nvmlGpuP2PStatus_enum =
    2;
pub const nvmlGpuP2PStatus_enum_NVML_P2P_STATUS_IOH_TOPOLOGY_NOT_SUPPORTED:
          nvmlGpuP2PStatus_enum =
    3;
pub const nvmlGpuP2PStatus_enum_NVML_P2P_STATUS_DISABLED_BY_REGKEY:
          nvmlGpuP2PStatus_enum =
    4;
pub const nvmlGpuP2PStatus_enum_NVML_P2P_STATUS_NOT_SUPPORTED:
          nvmlGpuP2PStatus_enum =
    5;
pub const nvmlGpuP2PStatus_enum_NVML_P2P_STATUS_UNKNOWN: nvmlGpuP2PStatus_enum
          =
    6;
pub type nvmlGpuP2PStatus_enum = raw::c_uint;
pub use self::nvmlGpuP2PStatus_enum as nvmlGpuP2PStatus_t;
pub const nvmlGpuP2PCapsIndex_enum_NVML_P2P_CAPS_INDEX_READ:
          nvmlGpuP2PCapsIndex_enum =
    0;
pub const nvmlGpuP2PCapsIndex_enum_NVML_P2P_CAPS_INDEX_WRITE:
          nvmlGpuP2PCapsIndex_enum =
    1;
pub const nvmlGpuP2PCapsIndex_enum_NVML_P2P_CAPS_INDEX_NVLINK:
          nvmlGpuP2PCapsIndex_enum =
    2;
pub const nvmlGpuP2PCapsIndex_enum_NVML_P2P_CAPS_INDEX_ATOMICS:
          nvmlGpuP2PCapsIndex_enum =
    3;
pub const nvmlGpuP2PCapsIndex_enum_NVML_P2P_CAPS_INDEX_PROP:
          nvmlGpuP2PCapsIndex_enum =
    4;
pub const nvmlGpuP2PCapsIndex_enum_NVML_P2P_CAPS_INDEX_UNKNOWN:
          nvmlGpuP2PCapsIndex_enum =
    5;
pub type nvmlGpuP2PCapsIndex_enum = raw::c_uint;
pub use self::nvmlGpuP2PCapsIndex_enum as nvmlGpuP2PCapsIndex_t;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlBridgeChipInfo_st {
    pub type_: nvmlBridgeChipType_t,
    pub fwVersion: raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlBridgeChipInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlBridgeChipInfo_st>() , 8usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlBridgeChipInfo_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlBridgeChipInfo_st>() , 4usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlBridgeChipInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipInfo_st ) ) . type_ as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBridgeChipInfo_st )
                , "::" , stringify ! ( type_ ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipInfo_st ) ) . fwVersion as
                * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBridgeChipInfo_st )
                , "::" , stringify ! ( fwVersion ) ));
}
impl Clone for nvmlBridgeChipInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlBridgeChipInfo_t = nvmlBridgeChipInfo_st;
#[repr(C)]
pub struct nvmlBridgeChipHierarchy_st {
    pub bridgeCount: raw::c_uchar,
    pub bridgeChipInfo: [nvmlBridgeChipInfo_t; 128usize],
}
#[test]
fn bindgen_test_layout_nvmlBridgeChipHierarchy_st() {
    assert_eq!(::std::mem::size_of::<nvmlBridgeChipHierarchy_st>() , 1028usize
               , concat ! (
               "Size of: " , stringify ! ( nvmlBridgeChipHierarchy_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlBridgeChipHierarchy_st>() , 4usize
                , concat ! (
                "Alignment of " , stringify ! ( nvmlBridgeChipHierarchy_st )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipHierarchy_st ) ) .
                bridgeCount as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlBridgeChipHierarchy_st ) , "::" , stringify ! (
                bridgeCount ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipHierarchy_st ) ) .
                bridgeChipInfo as * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlBridgeChipHierarchy_st ) , "::" , stringify ! (
                bridgeChipInfo ) ));
}
pub type nvmlBridgeChipHierarchy_t = nvmlBridgeChipHierarchy_st;
pub const nvmlSamplingType_enum_NVML_TOTAL_POWER_SAMPLES:
          nvmlSamplingType_enum =
    0;
pub const nvmlSamplingType_enum_NVML_GPU_UTILIZATION_SAMPLES:
          nvmlSamplingType_enum =
    1;
pub const nvmlSamplingType_enum_NVML_MEMORY_UTILIZATION_SAMPLES:
          nvmlSamplingType_enum =
    2;
pub const nvmlSamplingType_enum_NVML_ENC_UTILIZATION_SAMPLES:
          nvmlSamplingType_enum =
    3;
pub const nvmlSamplingType_enum_NVML_DEC_UTILIZATION_SAMPLES:
          nvmlSamplingType_enum =
    4;
pub const nvmlSamplingType_enum_NVML_PROCESSOR_CLK_SAMPLES:
          nvmlSamplingType_enum =
    5;
pub const nvmlSamplingType_enum_NVML_MEMORY_CLK_SAMPLES: nvmlSamplingType_enum
          =
    6;
pub const nvmlSamplingType_enum_NVML_SAMPLINGTYPE_COUNT: nvmlSamplingType_enum
          =
    7;
pub type nvmlSamplingType_enum = raw::c_uint;
pub use self::nvmlSamplingType_enum as nvmlSamplingType_t;
pub const nvmlPcieUtilCounter_enum_NVML_PCIE_UTIL_TX_BYTES:
          nvmlPcieUtilCounter_enum =
    0;
pub const nvmlPcieUtilCounter_enum_NVML_PCIE_UTIL_RX_BYTES:
          nvmlPcieUtilCounter_enum =
    1;
pub const nvmlPcieUtilCounter_enum_NVML_PCIE_UTIL_COUNT:
          nvmlPcieUtilCounter_enum =
    2;
pub type nvmlPcieUtilCounter_enum = raw::c_uint;
pub use self::nvmlPcieUtilCounter_enum as nvmlPcieUtilCounter_t;
pub const nvmlValueType_enum_NVML_VALUE_TYPE_DOUBLE: nvmlValueType_enum = 0;
pub const nvmlValueType_enum_NVML_VALUE_TYPE_UNSIGNED_INT: nvmlValueType_enum
          =
    1;
pub const nvmlValueType_enum_NVML_VALUE_TYPE_UNSIGNED_LONG: nvmlValueType_enum
          =
    2;
pub const nvmlValueType_enum_NVML_VALUE_TYPE_UNSIGNED_LONG_LONG:
          nvmlValueType_enum =
    3;
pub const nvmlValueType_enum_NVML_VALUE_TYPE_SIGNED_LONG_LONG:
          nvmlValueType_enum =
    4;
pub const nvmlValueType_enum_NVML_VALUE_TYPE_COUNT: nvmlValueType_enum = 5;
pub type nvmlValueType_enum = raw::c_uint;
pub use self::nvmlValueType_enum as nvmlValueType_t;
#[repr(C)]
#[derive(Copy)]
pub union nvmlValue_st {
    pub dVal: f64,
    pub uiVal: raw::c_uint,
    pub ulVal: raw::c_ulong,
    pub ullVal: raw::c_ulonglong,
    pub sllVal: raw::c_longlong,
    _bindgen_union_align: u64,
}
#[test]
fn bindgen_test_layout_nvmlValue_st() {
    assert_eq!(::std::mem::size_of::<nvmlValue_st>() , 8usize , concat ! (
               "Size of: " , stringify ! ( nvmlValue_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlValue_st>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( nvmlValue_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . dVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( dVal ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . uiVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( uiVal ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . ulVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( ulVal ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . ullVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( ullVal ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . sllVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( sllVal ) ));
}
impl Clone for nvmlValue_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlValue_t = nvmlValue_st;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlSample_st {
    pub timeStamp: raw::c_ulonglong,
    pub sampleValue: nvmlValue_t,
}
#[test]
fn bindgen_test_layout_nvmlSample_st() {
    assert_eq!(::std::mem::size_of::<nvmlSample_st>() , 16usize , concat ! (
               "Size of: " , stringify ! ( nvmlSample_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlSample_st>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( nvmlSample_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlSample_st ) ) . timeStamp as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlSample_st ) , "::"
                , stringify ! ( timeStamp ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlSample_st ) ) . sampleValue as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlSample_st ) , "::"
                , stringify ! ( sampleValue ) ));
}
impl Clone for nvmlSample_st {
    fn clone(&self) -> Self { *self }
}
